ingress.yaml

#############################
ingress
#############################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: dev-external
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:388606509852:certificate/e2711bc2-5d13-45c7-b9d5-bb6ec3b533e3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTP": 443}]'

  name: app-ingress
  namespace: default

spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: sample-nginx-app
            port:
              number: 80
        path: /
        pathType: Prefix
  - host:  example/local
    http:
      paths:
      - backend:
          service:
            name: msample-apache-app
            port:
              number: 8080
        path: /
        pathType: Prefix
